<resources>
    <string name="app_name">Neighbouthood</string>
    <string name="title_activity_sign_in_options">SignInOptionsActivity</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="alternateNumber">Alternate Number</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_login">Login</string>
</resources>
